#https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
	.github
	.github/*
	.gitattributes
	.gitignore

[metadata]
license_file = LICENSE
description-file = README.rst

[aliases]# Define setup.py command aliases here
release = sdist bdist_wheel
test = pytest
source = register sdist binary
binary = bdist_egg upload --show-response
